--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.5.0",
-    "next": "12.1.0",
+    "drei": "^2.2.21",
+    "next": "^12.1.0",
     "notistack": "^1.0.10",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-wavify": "^1.5.7"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-three-fiber": "^6.0.13",
+    "react-wavify": "^1.5.7",
+    "three": "^0.138.3"
   },
   "devDependencies": {
     "eslint": "8.10.0",
