--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.5.0",
+    "@splinetool/react-spline": "^2.0.0",
     "drei": "^2.2.21",
     "next": "^12.1.0",
     "notistack": "^1.0.10",
