--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "notistack": "^1.0.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hooks-global-state": "^1.0.2",
     "react-three-fiber": "^6.0.13",
     "react-wavify": "^1.5.7",
     "three": "^0.138.3"
