--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
-    "@mui/material": "^5.5.0",
+    "@mui/material": "^5.10.8",
+    "emotion": "^11.0.0",
     "next": "^12.1.0",
     "notistack": "^1.0.10",
     "react": "^17.0.2",
