--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
   "dependencies": {
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mahozad/theme-switch": "^1.5.2",
     "@mui/material": "^5.10.8",
     "emotion": "^11.0.0",
     "next": "^12.1.0",
